v3_issue_1017: PR ready. All tests pass